--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-HERMES_SRC_DIR=/home/dylan/Projects/gtfs/hermes
+SRC_DIR=/home/dylan/Projects/gtfs
 PROJECTS_DATA=/home/dylan/Projects/gtfs/_data
+POSTGRES_PASSWORD: docker
+POSTGRES_DB: alexandria
+POSTGRES_USER: postgresql
