--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,10 @@ services:
   postgres:
     restart: always
     image: postgres:11.1
+    environment:
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: postgresql
     ports:
       - "5432:5432"
 
@@ -12,19 +16,21 @@ services:
       context: ./hermes
     depends_on:
       - postgres
-      - pulsar
     ports:
       - "3000:3000"
     volumes:
-      - "${HERMES_SRC_DIR}:/app:delegated"
+      - "${SRC_DIR}/hermes:/app:delegated"
     command: yarn run dev
 
-  pulsar:
-    restart: always
-    image: apachepulsar/pulsar:2.0.1-incubating
-    command: bin/pulsar standalone
-    ports:
-      - "6650:6650"
-      - "8080:8080"
+  hephaestus:
+    restart: "no"
+    build:
+      context: ./hephaestus
+    depends_on:
+      - postgres
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
     volumes:
-      - "${PROJECTS_DATA}/pulsar:/pulsar/data:delegated"
+      - "${SRC_DIR}/hephaestus:/app:delegated"
+    command: yarn run migrate
